welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:7: error: type mismatch;
 found   : String("-1")
 required: Int
			I="-1"
                          ^