welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var I=0
	for (i<-0 to nums.length-1) {
		if (nums(i)==value) {
			I=i
		} else {
			I="-1"
		}
	} 
	return I
}
